--- a/PES1UG22AM155.ipynb
+++ b/PES1UG22AM155.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_19482/530970970.py:34: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/tmp/ipykernel_4641/4070365861.py:34: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -227,7 +227,7 @@
     "df.reset_index(drop=True, inplace=True)\n",
     "\n",
     "# # Ensure 'Year' is removed from the features as it is datetime\n",
-    "df = df.drop(columns=[\"Year\"])\n",
+    "# df = df.drop(columns=[\"Year\"])\n",
     "\n",
     "# Split data into features and target\n",
     "X = df.drop(columns=[\"Life expectancy \"])\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,14 +396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Regression - Mean Squared Error: 16.13, R^2 Score: 0.82\n",
+      "Linear Regression - Mean Squared Error: 16.12, R^2 Score: 0.82\n",
       "Lasso Regression - Mean Squared Error: 18.01, R^2 Score: 0.80\n",
       "Ridge Regression - Mean Squared Error: 16.14, R^2 Score: 0.82\n",
       "Elastic Net Regression - Mean Squared Error: 17.70, R^2 Score: 0.80\n"
